Sending, receiving, and validating message ok